Revising before next lecture

--- a/frap_book.tex
+++ b/frap_book.tex
@@ -4314,7 +4314,7 @@ In our Hoare-logic examples so far, we have intentionally tread lightly when it 
 Generally, we have only worked with, for instance, a single array at a time.
 Reasoning about multi-array programs usually depends on the fact that the arrays don't overlap in memory at all.
 Things are even more complicated with linked data structures, like linked lists and trees, which we haven't even attempted up to now.
-However, by using \emph{separation logic}\index{separation logic}, a popular variant of Hoare logic, we will find it quite pleasant to prove programs that used linked structures, with no need for explicit reasoning about aliasing, assuming that we keep all of our data structures disjoint from each other through simple coding patterns.
+However, by using \emph{separation logic}\index{separation logic}, a popular variant of Hoare logic, we will find it quite pleasant to prove programs that use linked structures, with no need for explicit reasoning about aliasing, assuming that we keep all of our data structures disjoint from each other through simple coding patterns.
 
 
 \section{An Object Language with Dynamic Memory Allocation}
