Note required Coq version

--- a/frap_book.tex
+++ b/frap_book.tex
@@ -84,7 +84,7 @@ In this early version, you get to take the author's word for it that we are abou
 However, one overarching element of our strategy is important enough to deserve to be called out here.
 We will study a variety of different approaches for formalizing what a program should do and for proving that a program does what it should.
 At every step, we will pay close attention to the \emph{common foundation} that underlies everything.
-For one thing, we will be proving all of our theorems with the Coq proof assistant, a powerful framework for writing and machine-checking proofs.
+For one thing, we will be proving all of our theorems with the Coq proof assistant\footnote{The author only makes an effort to keep the associated Coq code working with the latest Coq version, which is 8.16 as of this writing.}, a powerful framework for writing and machine-checking proofs.
 Coq itself is based on a relatively small set of core features, much like a well-designed programming language, and in both we build up increasingly sophisticated abstractions as libraries.
 Those features can be thought of as the core of all mathematical reasoning.
 
