Italicize a term on first use (thanks to Todd Morley for the suggestion)

--- a/frap_book.tex
+++ b/frap_book.tex
@@ -1181,7 +1181,7 @@ $$\begin{array}{rrcl}
   \underline{\textrm{Variables}} & p \\
   \textrm{Formula} & \phi &::=& \top \mid \bot \mid \phi \land \phi \mid \phi \lor \phi \mid \underline{p \mid \phi \Rightarrow \phi}
 \end{array}$$
-Note how we add propositional variables $p$, which stand for unknown truth values.
+Note how we add \emph{propositional variables} $p$, which stand for unknown truth values.
 
 What is fundamentally harder about modeling implication?
 We need to perform \emph{hypothetical reasoning}\index{hypothetical reasoning}, trying to prove a formula with other formulas available as known facts.
